--- a/refacbus_admin/public/index.html
+++ b/refacbus_admin/public/index.html
@@ -6,9 +6,7 @@
     <title>Tailwind Test</title>
     <script type="module" src="/src/main.js"></script>
   </head>
-  <body class="bg-gray-100 text-center p-10">
-    <h1 class="text-3xl font-bold text-blue-500">
-      TailwindCSS 적용 완료 🎉
-    </h1>
+  <body>
+    <div id="root"></div>
   </body>
 </html>
